menu cursor visibility fix

--- a/style/style.css
+++ b/style/style.css
@@ -195,7 +195,7 @@ nav.mobile-nav {
   position: fixed;
   right: 5%;
   top: 5%;
-  z-index: 10;
+  z-index: 25;
 }
 
 section {
@@ -1073,7 +1073,7 @@ footer a {
     transform-origin: 50% 50%;
     border-radius: 50%;
     pointer-events: none;
-    z-index: 5;
+    z-index: 25;
     transition: .3s linear;
     transition-property: width, height;
   }
